--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -29,11 +29,11 @@
 
         <div class="form-floating">
           <input type="username" class="form-control top" id="username" name="username" placeholder="Username">
-          <label for="floatingInput">Username</label>
+          <label for="floatingInput">Nombre de Usuario</label>
         </div>
         <div class="form-floating mb-3">
           <input type="password" class="form-control bottom" id="floatingPassword" name="password" placeholder="Password">
-          <label for="floatingPassword">Password</label>
+          <label for="floatingPassword">Contraseña</label>
         </div>
         <div class="row justify-content-around">
           <div class="col-8 col-md-auto">
