--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,11 +26,11 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item btn btn-light mb-2" >
-            <a href="#" class="nav-link link-dark" aria-current="page">
+            <a href="{{ url_for('productor') }}" class="nav-link link-dark" aria-current="page">
                 Datos del productor
             </a>
             </li>
-            <li class="nav-item btn btn-light mb-2">
+            <li class="nav-item btn btn-light mb-2" id="adminTab">
             <a href="{{ url_for('admin') }}" class="nav-link link-dark" aria-current="page">
                 Perfiles de Usuarios
             </a>
