--- a/src/templates/productor.html
+++ b/src/templates/productor.html
@@ -150,7 +150,7 @@
             {%endfor%}
             </select>
             
-            <label for="floatingInput">Rol</label>
+            <label for="floatingInput">Tipo de Productor</label>
           </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
